--- a/apiServer/index.html
+++ b/apiServer/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Doni API Server</title>
-    <meta charset="utf-8" />
-    <meta content="IE=edge;chrome=1" http-equiv="X-UA-Compatible" />
-    <meta content="initial-scale=1, width=device-width, height=device-height" name="viewport" />
-  </head>
+<head>
+  <title>Ether.</title>
+  <meta charset="utf-8" />
+  <meta content="IE=edge;chrome=1" http-equiv="X-UA-Compatible" />
+  <meta content="initial-scale=1, width=device-width, height=device-height" name="viewport" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" />
+  <script>
+    window.Config = {
+      API_URL: '@HOST',
+      WS_API_URL: '@SOCKET',
+      GOOGLE_CLIENT_ID: '@GOOGLE_CLIENT_ID'
+    }
+  </script>
+</head>
 <body>
-  <p>It’s a Done Deal.</p>
+  <section id="reactapp"></section>
+  <script src="@HOST/socket.io/socket.io.js"></script>
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <script src="@BUNDLE"></script>
 </body>
 </html>
